--- a/src/Components/navbar/navbar.module.css
+++ b/src/Components/navbar/navbar.module.css
@@ -11,7 +11,7 @@
     color: white;
     align-items: center;
     height: 100%;
-    padding-top:5px;
+    padding-top:15px;
     padding-bottom: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -87,7 +87,8 @@ ul a.active
 {
     background-color:#f5a623;
     text-decoration: none;
-    padding-left:0px;
+    padding-left:10px;
+    padding-right: 10px;
     color: white!important;
 }
 ul a.active:hover p
@@ -119,7 +120,6 @@ ul a.active:hover i
         text-align:left;
         width:fit-content;
         padding:0;
-        display: none;
         position: absolute;
         top:74px;
         right:27px;
